crates/doodle-core/tests/snapshots/broken_syntax__16_unbalanced_paren.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `)` to close this call
  --> 16-unbalanced-paren.doodle:1:5
1 | show((1 + 2)
  |     ^
